@startuml

title __Event package's Class Diagram__\n

  namespace com.bowling.alley {
    namespace event {
      class com.bowling.alley.event.ControlDeskEvent {
          - partyQueue : Vector<String>
          + ControlDeskEvent()
          + getPartyQueue()
      }
    }
  }
  

  namespace com.bowling.alley {
    namespace event {
      class com.bowling.alley.event.LaneEvent {
          - ball : int
          - cumulScore : int[][]
          - curScores : int[]
          - frame : int
          - frameNum : int
          - index : int
          - mechProb : boolean
          - score : Map<Bowler, int[]>
          + LaneEvent()
          + getBall()
          + getBowler()
          + getCumulScore()
          + getCurScores()
          + getFrame()
          + getFrameNum()
          + getIndex()
          + getParty()
          + getScore()
          + isMechanicalProblem()
      }
    }
  }
  

  namespace com.bowling.alley {
    namespace event {
      class com.bowling.alley.event.PinsetterEvent {
          - foulCommited : boolean
          - pinsDownThisThrow : int
          - pinsStillStanding : boolean[]
          - throwNumber : int
          + PinsetterEvent()
          + getThrowNumber()
          + isFoulCommited()
          + pinKnockedDown()
          + pinsDownOnThisThrow()
          + totalPinsDown()
      }
    }
  }
  

  com.bowling.alley.event.LaneEvent o-- com.bowling.alley.model.Bowler : bowler
  com.bowling.alley.event.LaneEvent o-- com.bowling.alley.model.Party : p


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
